src/yini_test/cases/golden/lenient/valid/lists/list-of-booleans.yini
@yini

^ Lists
items = [true, false, true]

