src/yini_test/cases/golden/lenient/invalid/lists/list-opening-on-next-line.yini
@yini

^ Lists
items =
[1, 2, 3]

